// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`flex child props 1`] = `
.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-1 > * {
  margin: 0;
}

.emotion-1 > *:nth-child(1) {
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  justify-self: flex-end;
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-0 > * {
  margin: 0;
}

<div
  className="emotion-1"
>
  <div
    className="emotion-0"
  >
    Test
  </div>
</div>
`;

exports[`flex child props 2`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-0 > * {
  margin: 0;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-1 > * {
  margin: 0;
}

.emotion-1 > *:nth-child(1) {
  justify-self: flex-start;
  -webkit-align-self: flex-end;
  -ms-flex-item-align: end;
  align-self: flex-end;
}

<div
  className="emotion-1"
>
  <div
    className="emotion-0"
  >
    Test
  </div>
</div>
`;

exports[`flex child props 3`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-0 > * {
  margin: 0;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-2 > * {
  margin: 0;
}

.emotion-2 > *:nth-child(1) {
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  justify-self: flex-end;
}

.emotion-2 > *:nth-child(2) {
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  justify-self: flex-end;
}

<div
  className="emotion-2"
>
  <div
    className="emotion-0"
  >
    Test
  </div>
  <div
    className="emotion-0"
  >
    Test
  </div>
</div>
`;

exports[`flex props 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.emotion-0 > * {
  margin: 0;
}

.emotion-0 > * + * {
  margin-top: 16px;
}

<div
  className="emotion-0"
>
  <div>
    Test
  </div>
</div>
`;

exports[`flex props 2`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-0 > * {
  margin: 0;
}

.emotion-0 > * + * {
  margin-left: 16px;
}

<div
  className="emotion-0"
>
  <div>
    Test
  </div>
</div>
`;
